# serializer version: 1
# name: test_valves[valve.12345_flower_box-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.12345_flower_box',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Flower box',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Flower box',
    'platform': 'rainmachine',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_zone_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_valves[valve.12345_flower_box-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'area': 92.9,
      'current_cycle': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      'field_capacity': 0.17,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '12345 Flower box',
      'id': 2,
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      'number_of_cycles': 0,
      'restrictions': False,
      'slope': 'Flat',
      'soil_type': 'Sandy Loam',
      'sprinkler_head_precipitation_rate': 12.7,
      'sprinkler_head_type': 'Surface Drip',
      'status': <RunStates.NOT_RUNNING: 'Not Running'>,
      'sun_exposure': 'Full Sun',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
      'vegetation_type': 'Vegetables',
    }),
    'context': <ANY>,
    'entity_id': 'valve.12345_flower_box',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_valves[valve.12345_landscaping-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.12345_landscaping',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Landscaping',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Landscaping',
    'platform': 'rainmachine',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_zone_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_valves[valve.12345_landscaping-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'area': 92.9,
      'current_cycle': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      'field_capacity': 0.17,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '12345 Landscaping',
      'id': 1,
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      'number_of_cycles': 0,
      'restrictions': False,
      'slope': 'Flat',
      'soil_type': 'Sandy Loam',
      'sprinkler_head_precipitation_rate': 25.4,
      'sprinkler_head_type': 'Bubblers Drip',
      'status': <RunStates.NOT_RUNNING: 'Not Running'>,
      'sun_exposure': 'Full Sun',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
      'vegetation_type': 'Flowers',
    }),
    'context': <ANY>,
    'entity_id': 'valve.12345_landscaping',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_valves[valve.12345_test-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.12345_test',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Test',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Test',
    'platform': 'rainmachine',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_zone_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_valves[valve.12345_test-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'area': 92.9,
      'current_cycle': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      'field_capacity': 0.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '12345 Test',
      'id': 3,
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      'number_of_cycles': 0,
      'restrictions': False,
      'slope': 'Flat',
      'soil_type': 'Clay Loam',
      'sprinkler_head_precipitation_rate': 35.56,
      'sprinkler_head_type': 'Popup Spray',
      'status': <RunStates.NOT_RUNNING: 'Not Running'>,
      'sun_exposure': 'Full Sun',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
      'vegetation_type': 'Drought Tolerant Plants',
    }),
    'context': <ANY>,
    'entity_id': 'valve.12345_test',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_valves[valve.12345_zone_10-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.12345_zone_10',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 10',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Zone 10',
    'platform': 'rainmachine',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_zone_10',
    'unit_of_measurement': None,
  })
# ---
# name: test_valves[valve.12345_zone_10-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'area': 92.9,
      'current_cycle': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      'field_capacity': 0.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '12345 Zone 10',
      'id': 10,
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      'number_of_cycles': 0,
      'restrictions': False,
      'slope': 'Flat',
      'soil_type': 'Clay Loam',
      'sprinkler_head_precipitation_rate': 35.56,
      'sprinkler_head_type': 'Popup Spray',
      'status': <RunStates.NOT_RUNNING: 'Not Running'>,
      'sun_exposure': 'Full Sun',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
      'vegetation_type': 'Cool Season Grass',
    }),
    'context': <ANY>,
    'entity_id': 'valve.12345_zone_10',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_valves[valve.12345_zone_11-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.12345_zone_11',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 11',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Zone 11',
    'platform': 'rainmachine',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_zone_11',
    'unit_of_measurement': None,
  })
# ---
# name: test_valves[valve.12345_zone_11-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'area': 92.9,
      'current_cycle': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      'field_capacity': 0.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '12345 Zone 11',
      'id': 11,
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      'number_of_cycles': 0,
      'restrictions': False,
      'slope': 'Flat',
      'soil_type': 'Clay Loam',
      'sprinkler_head_precipitation_rate': 35.56,
      'sprinkler_head_type': 'Popup Spray',
      'status': <RunStates.NOT_RUNNING: 'Not Running'>,
      'sun_exposure': 'Full Sun',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
      'vegetation_type': 'Cool Season Grass',
    }),
    'context': <ANY>,
    'entity_id': 'valve.12345_zone_11',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_valves[valve.12345_zone_12-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.12345_zone_12',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 12',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Zone 12',
    'platform': 'rainmachine',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_zone_12',
    'unit_of_measurement': None,
  })
# ---
# name: test_valves[valve.12345_zone_12-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'area': 92.9,
      'current_cycle': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      'field_capacity': 0.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '12345 Zone 12',
      'id': 12,
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      'number_of_cycles': 0,
      'restrictions': False,
      'slope': 'Flat',
      'soil_type': 'Clay Loam',
      'sprinkler_head_precipitation_rate': 35.56,
      'sprinkler_head_type': 'Popup Spray',
      'status': <RunStates.NOT_RUNNING: 'Not Running'>,
      'sun_exposure': 'Full Sun',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
      'vegetation_type': 'Cool Season Grass',
    }),
    'context': <ANY>,
    'entity_id': 'valve.12345_zone_12',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_valves[valve.12345_zone_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.12345_zone_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 4',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Zone 4',
    'platform': 'rainmachine',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_zone_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_valves[valve.12345_zone_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'area': 92.9,
      'current_cycle': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      'field_capacity': 0.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '12345 Zone 4',
      'id': 4,
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      'number_of_cycles': 0,
      'restrictions': False,
      'slope': 'Flat',
      'soil_type': 'Clay Loam',
      'sprinkler_head_precipitation_rate': 35.56,
      'sprinkler_head_type': 'Popup Spray',
      'status': <RunStates.NOT_RUNNING: 'Not Running'>,
      'sun_exposure': 'Full Sun',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
      'vegetation_type': 'Cool Season Grass',
    }),
    'context': <ANY>,
    'entity_id': 'valve.12345_zone_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_valves[valve.12345_zone_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.12345_zone_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 5',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Zone 5',
    'platform': 'rainmachine',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_zone_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_valves[valve.12345_zone_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'area': 92.9,
      'current_cycle': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      'field_capacity': 0.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '12345 Zone 5',
      'id': 5,
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      'number_of_cycles': 0,
      'restrictions': False,
      'slope': 'Flat',
      'soil_type': 'Clay Loam',
      'sprinkler_head_precipitation_rate': 35.56,
      'sprinkler_head_type': 'Popup Spray',
      'status': <RunStates.NOT_RUNNING: 'Not Running'>,
      'sun_exposure': 'Full Sun',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
      'vegetation_type': 'Cool Season Grass',
    }),
    'context': <ANY>,
    'entity_id': 'valve.12345_zone_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_valves[valve.12345_zone_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.12345_zone_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 6',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Zone 6',
    'platform': 'rainmachine',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_zone_6',
    'unit_of_measurement': None,
  })
# ---
# name: test_valves[valve.12345_zone_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'area': 92.9,
      'current_cycle': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      'field_capacity': 0.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '12345 Zone 6',
      'id': 6,
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      'number_of_cycles': 0,
      'restrictions': False,
      'slope': 'Flat',
      'soil_type': 'Clay Loam',
      'sprinkler_head_precipitation_rate': 35.56,
      'sprinkler_head_type': 'Popup Spray',
      'status': <RunStates.NOT_RUNNING: 'Not Running'>,
      'sun_exposure': 'Full Sun',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
      'vegetation_type': 'Cool Season Grass',
    }),
    'context': <ANY>,
    'entity_id': 'valve.12345_zone_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_valves[valve.12345_zone_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.12345_zone_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 7',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Zone 7',
    'platform': 'rainmachine',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_zone_7',
    'unit_of_measurement': None,
  })
# ---
# name: test_valves[valve.12345_zone_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'area': 92.9,
      'current_cycle': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      'field_capacity': 0.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '12345 Zone 7',
      'id': 7,
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      'number_of_cycles': 0,
      'restrictions': False,
      'slope': 'Flat',
      'soil_type': 'Clay Loam',
      'sprinkler_head_precipitation_rate': 35.56,
      'sprinkler_head_type': 'Popup Spray',
      'status': <RunStates.NOT_RUNNING: 'Not Running'>,
      'sun_exposure': 'Full Sun',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
      'vegetation_type': 'Cool Season Grass',
    }),
    'context': <ANY>,
    'entity_id': 'valve.12345_zone_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_valves[valve.12345_zone_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.12345_zone_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 8',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Zone 8',
    'platform': 'rainmachine',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_zone_8',
    'unit_of_measurement': None,
  })
# ---
# name: test_valves[valve.12345_zone_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'area': 92.9,
      'current_cycle': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      'field_capacity': 0.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '12345 Zone 8',
      'id': 8,
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      'number_of_cycles': 0,
      'restrictions': False,
      'slope': 'Flat',
      'soil_type': 'Clay Loam',
      'sprinkler_head_precipitation_rate': 35.56,
      'sprinkler_head_type': 'Popup Spray',
      'status': <RunStates.NOT_RUNNING: 'Not Running'>,
      'sun_exposure': 'Full Sun',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
      'vegetation_type': 'Cool Season Grass',
    }),
    'context': <ANY>,
    'entity_id': 'valve.12345_zone_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_valves[valve.12345_zone_9-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.12345_zone_9',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 9',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Zone 9',
    'platform': 'rainmachine',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_zone_9',
    'unit_of_measurement': None,
  })
# ---
# name: test_valves[valve.12345_zone_9-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'area': 92.9,
      'current_cycle': 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      'field_capacity': 0.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '12345 Zone 9',
      'id': 9,
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      'number_of_cycles': 0,
      'restrictions': False,
      'slope': 'Flat',
      'soil_type': 'Clay Loam',
      'sprinkler_head_precipitation_rate': 35.56,
      'sprinkler_head_type': 'Popup Spray',
      'status': <RunStates.NOT_RUNNING: 'Not Running'>,
      'sun_exposure': 'Full Sun',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
      'vegetation_type': 'Cool Season Grass',
    }),
    'context': <ANY>,
    'entity_id': 'valve.12345_zone_9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
